enforcing min-width to ensure alignment

--- a/HTML/styles.css
+++ b/HTML/styles.css
@@ -174,6 +174,11 @@ a img{border:0px;}
 #connect .content .contact{
 	display:grid;
 	grid-template-columns: 1fr 1fr;
+	align-items:center;
+}
+#connect .content .contact p{
+
+	min-width:290px;
 }
 
 #connect #form{
@@ -223,7 +228,7 @@ a img{border:0px;}
 	list-style:none;
 	float:left;
 }
-#connect #social-footer #sm-links li a{
+#connect  a{
 	display:block;
 	text-indent:-9999px;
 	width:26px; 
